--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,9 @@ spring.h2.console.settings.web-allow-others=true
 spring.datasource.driver-class-name=org.h2.Driver
 #spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 
-spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.url=jdbc:log4jdbc:h2:mem:testdb
+# ?? ?? ?????? ??
+spring.datasource.url=jdbc:h2:file:./data/testdb
+#spring.datasource.url=jdbc:log4jdbc:h2:file:./data/testdb
 spring.datasource.username=sa
 spring.datasource.password=
 
@@ -21,7 +22,7 @@ mybatis.mapper-locations=classpath:mapper/**.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.call-setters-on-nulls=false
 
-# ?? ?? ?? ??
+# ?? ??
 logging.level.jdbc.sqlonly=OFF
 logging.level.jdbc.sqltiming=INFO
 logging.level.jdbc.resultsettable=OFF
